<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/border_radius_card_big"
    app:cardElevation="@dimen/card_elevation_xsmall"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/weather_image_view"
            android:layout_width="@dimen/width_image_view_xbig"
            android:layout_height="@dimen/height_image_view_xbig"
            android:layout_marginStart="@dimen/image_view_margin_start_xsmall"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/default_image" />

        <TextView
            android:id="@+id/weather_description"
            style="@style/CardTextViewStyleCustomMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_description"
            app:layout_constraintBottom_toBottomOf="@id/weather_forecast_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/weather_image_view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/weather_forecast_date"
            style="@style/CardTextViewStyleCustomMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_data_forecast"
            app:layout_constraintBottom_toTopOf="@id/weather_thermal_sensation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/weather_image_view"
            app:layout_constraintTop_toBottomOf="@id/weather_description" />

        <TextView
            android:id="@+id/weather_thermal_sensation"
            style="@style/CardTextViewStyleCustomMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thermal_sensation"
            app:layout_constraintBottom_toBottomOf="@id/weather_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/weather_image_view" />

        <TextView
            android:id="@+id/weather_minimum_temperature"
            style="@style/CardTextViewStyleCustomMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minimum_temperature"
            app:layout_constraintEnd_toStartOf="@id/weather_maximum_temperature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_image_view" />

        <TextView
            android:id="@+id/weather_maximum_temperature"
            style="@style/CardTextViewStyleCustomMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maximum_temperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/weather_minimum_temperature"
            app:layout_constraintTop_toBottomOf="@id/weather_image_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
